Consultar lista de usuarios, logear y registrar

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "prod": "node ./bin/www",
     "start": "DEBUG=express-mvc:* npm start"
   },
   "dependencies": {
